--- a/app/styles/index.module.css
+++ b/app/styles/index.module.css
@@ -10,3 +10,13 @@
   margin-top: 20px;
   gap: 10px;
 }
+
+@media screen and (max-width: 648px) {
+  .videoContainer {
+    flex-wrap: wrap;
+  }
+
+  .videoContainer > div {
+    width: 100%;
+  }
+}
